# docpilot

./: LICENSE  PUBLISHING.md  README.md  example.py  pyproject.toml
docpilot/: _canvas.py  report.py  styles.py
docpilot_pkg/: .gitignore  PUBLISHING.md  example.py
docpilot_pkg/docpilot/: __init__.py
tests/: test_report.py
