[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "docpilot"
version = "0.1.0"
description = "Generate professional, branded PDF reports with a minimal fluent API."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gyanankur Baruah", email = "gyanankur9@gmail.com" }]
keywords = ["pdf", "report", "reportlab", "document", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
    "types-reportlab",
]

[project.urls]
Homepage = "https://github.com/Gyanankur23/docpilot"
Repository = "https://github.com/Gyanankur23/docpilot"
"Bug Tracker" = "https://github.com/Gyanankur23/docpilot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["docpilot*"]
